[package]
name = "wikiblocks-tests"
version = "0.1.0"
description = "Tests for Wikiblocks node"
license = "MIT"
repository = "https://github.com/akildemir/wikiblocks/tree/develop/tests/"
authors = ["Akil Demir <akildemir72@gmail.com>"]
keywords = ["wikiblocks", "tests"]
edition = "2021"
rust-version = "1.74"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
scale = { package = "parity-scale-codec", version = "3" }

sp-core = { git = "https://github.com/serai-dex/substrate" }

wikiblocks-abi = { path = "../src/abi", version = "0.1" }
wikiblocks-client = { path = "../src/client", features = ["wikiblocks"] }

tokio = "1"

chrono = "0.4"

dockertest = "0.5"
