[package]
name = "wikiblocks-abi"
version = "0.1.0"
description = "ABI for the Wikiblocks runtime"
license = "MIT"
repository = "https://github.com/akildemir/wikiblocks/tree/develop/substrate/abi"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.74"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

borsh = { version = "1", default-features = false, features = ["derive", "de_strict_order"], optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

sp-core = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-runtime = { git = "https://github.com/serai-dex/substrate", default-features = false }

sp-consensus-babe = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/serai-dex/substrate", default-features = false }

frame-support = { git = "https://github.com/serai-dex/substrate", default-features = false }

wikiblocks-primitives = { path = "../primitives", version = "0.1", default-features = false }
wikiblocks-coins-primitives = { path = "../coins/primitives", version = "0.1", default-features = false }
wikiblocks-validator-sets-primitives = { path = "../validator-sets/primitives", version = "0.1", default-features = false }

[features]
std = [
  "scale/std",
  "scale-info/std",

  "borsh?/std",
  "serde?/std",

  "sp-core/std",
  "sp-runtime/std",

  "sp-consensus-babe/std",
  "sp-consensus-grandpa/std",

  "frame-support/std",

  "wikiblocks-primitives/std",
  "wikiblocks-coins-primitives/std",
  "wikiblocks-validator-sets-primitives/std",
]
borsh = [
  "dep:borsh",
  "wikiblocks-primitives/borsh",
  "wikiblocks-coins-primitives/borsh",
  "wikiblocks-validator-sets-primitives/borsh",
]
serde = [
  "dep:serde",
  "wikiblocks-primitives/serde",
  "wikiblocks-coins-primitives/serde",
  "wikiblocks-validator-sets-primitives/serde",
]
default = ["std"]
