[package]
name = "wikiblocks-client"
version = "0.1.0"
description = "Client library for the Serai network"
license = "MIT"
repository = "https://github.com/akildemir/wikiblocks/tree/develop/substrate/client"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["wikiblocks"]
edition = "2021"
rust-version = "1.74"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
zeroize = "^1.5"
thiserror = { version = "1", optional = true }

hex = "0.4"
scale = { package = "parity-scale-codec", version = "3" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

wikiblocks-abi = { path = "../abi", version = "0.1" }

multiaddr = { version = "0.18", optional = true }
sp-core = { git = "https://github.com/serai-dex/substrate", optional = true }
sp-runtime = { git = "https://github.com/serai-dex/substrate", optional = true }
frame-system = { git = "https://github.com/serai-dex/substrate", optional = true }

async-lock = "3"

simple-request = { git = "https://github.com/serai-dex/serai",version = "0.1", optional = true }

[dev-dependencies]
rand_core = "0.6"
hex = "0.4"

blake2 = "0.10"

tokio = "1"

[features]
wikiblocks = ["thiserror", "serde", "serde_json", "wikiblocks-abi/serde", "multiaddr", "sp-core", "sp-runtime", "frame-system", "simple-request"]
borsh = ["wikiblocks-abi/borsh"]
