[package]
name = "wikiblocks-node"
version = "0.1.0"
description = "Wikiblocks network node, built over Substrate"
license = "AGPL-3.0-only"
repository = "https://github.com/akildemir/wikiblocks/tree/develop/substrate/node"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
publish = false
rust-version = "1.74"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[[bin]]
name = "wikiblocks-node"

[dependencies]
rand_core = "0.6"
zeroize = "1"
hex = "0.4"
log = "0.4"

schnorrkel = "0.11"

libp2p = "0.52"

sp-core = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sp-keystore = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sp-timestamp = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sp-io = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sp-blockchain = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sp-api = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sp-block-builder = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sp-consensus-babe = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }

frame-benchmarking = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }

wikiblocks-runtime = { path = "../runtime", features = ["std"] }

clap = { version = "4", features = ["derive"] }

futures-util = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
jsonrpsee = { version = "0.16", features = ["server"] }

sc-offchain = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-transaction-pool = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-transaction-pool-api = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-basic-authorship = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-executor = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-service = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-client-api = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-network-common = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-network = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }

sc-consensus = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-consensus-babe = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-consensus-grandpa = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-authority-discovery = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }

sc-telemetry = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
sc-cli = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }

sc-rpc-api = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }

substrate-frame-rpc-system = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }
pallet-transaction-payment-rpc = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/wikiblocks-encyclopedia/substrate" }

[features]
default = []

runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",

  "wikiblocks-runtime/runtime-benchmarks",
]
