[package]
name = "wikiblocks-runtime"
version = "0.1.0"
description = "Wikiblocks network node runtime, built over Substrate"
license = "AGPL-3.0-only"
repository = "https://github.com/akildemir/wikiblocks/tree/develop/substrate/runtime"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.74"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["scale", "scale-info"]

[lints]
workspace = true

[dependencies]
hashbrown = { version = "0.14", default-features = false, features = ["ahash", "inline-more"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

sp-core = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-std = { git = "https://github.com/serai-dex/substrate", default-features = false }

sp-offchain = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-version = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-inherents = { git = "https://github.com/serai-dex/substrate", default-features = false }

sp-session = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-consensus-babe = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/serai-dex/substrate", default-features = false }

sp-authority-discovery = { git = "https://github.com/serai-dex/substrate", default-features = false }

sp-transaction-pool = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-block-builder = { git = "https://github.com/serai-dex/substrate", default-features = false }

sp-runtime = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-api = { git = "https://github.com/serai-dex/substrate", default-features = false }

frame-system = { git = "https://github.com/serai-dex/substrate", default-features = false }
frame-support = { git = "https://github.com/serai-dex/substrate", default-features = false }
frame-executive = { git = "https://github.com/serai-dex/substrate", default-features = false }
frame-benchmarking = { git = "https://github.com/serai-dex/substrate", default-features = false, optional = true }

wikiblocks-primitives = { path = "../primitives", default-features = false }
wikiblocks-abi = { path = "../abi", default-features = false, features = ["serde"] }

pallet-timestamp = { git = "https://github.com/serai-dex/substrate", default-features = false }
pallet-authorship = { git = "https://github.com/serai-dex/substrate", default-features = false }

pallet-transaction-payment = { git = "https://github.com/serai-dex/substrate", default-features = false }

coins-pallet = { package = "wikiblocks-coins-pallet", path = "../coins/pallet", default-features = false }
validator-sets-pallet = { package = "wikiblocks-validator-sets-pallet", path = "../validator-sets/pallet", default-features = false }
emissions-pallet = { package = "wikiblocks-emissions-pallet", path = "../emissions/pallet", default-features = false }


articles-pallet = { package = "wikiblocks-articles-pallet", path = "../articles/pallet", default-features = false }
votes-pallet = { package = "wikiblocks-votes-pallet", path = "../votes/pallet", default-features = false }

pallet-babe = { git = "https://github.com/serai-dex/substrate", default-features = false }
pallet-grandpa = { git = "https://github.com/serai-dex/substrate", default-features = false }

frame-system-rpc-runtime-api = { git = "https://github.com/serai-dex/substrate", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/serai-dex/substrate", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/serai-dex/substrate" }

[features]
std = [
  "scale/std",
  "scale-info/std",

  "sp-core/std",
  "sp-std/std",

  "sp-offchain/std",
  "sp-version/std",
  "sp-inherents/std",

  "sp-session/std",
  "sp-consensus-babe/std",
  "sp-consensus-grandpa/std",

  "sp-authority-discovery/std",

  "sp-transaction-pool/std",
  "sp-block-builder/std",

  "sp-runtime/std",
  "sp-api/std",

  "frame-system/std",
  "frame-support/std",
  "frame-executive/std",

  "wikiblocks-primitives/std",
  "wikiblocks-abi/std",
  "wikiblocks-abi/serde",

  "pallet-timestamp/std",
  "pallet-authorship/std",

  "pallet-transaction-payment/std",

  "coins-pallet/std",
  "validator-sets-pallet/std",
  "emissions-pallet/std",

  "articles-pallet/std",
  "votes-pallet/std",

  "pallet-babe/std",
  "pallet-grandpa/std",

  "frame-system-rpc-runtime-api/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
]

runtime-benchmarks = [
  "sp-runtime/runtime-benchmarks",

  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",

  "pallet-timestamp/runtime-benchmarks",

  "pallet-babe/runtime-benchmarks",
  "pallet-grandpa/runtime-benchmarks",
]

default = ["std"]
