[package]
name = "wikiblocks-emissions-pallet"
version = "0.1.0"
description = "Emissions pallet for Wikiblocks"
license = "AGPL-3.0-only"
repository = "https://github.com/akildemir/wikiblocks/tree/develop/substrate/emissions/pallet"
authors = ["Akil Demir <akildemir72@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["scale", "scale-info"]

[lints]
workspace = true

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

frame-system = { git = "https://github.com/serai-dex/substrate", default-features = false }
frame-support = { git = "https://github.com/serai-dex/substrate", default-features = false }

sp-std = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-runtime = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-core = { git = "https://github.com/serai-dex/substrate", default-features = false }

coins-pallet = { package = "wikiblocks-coins-pallet", path = "../../coins/pallet", default-features = false }
validator-sets-pallet = { package = "wikiblocks-validator-sets-pallet", path = "../../validator-sets/pallet", default-features = false }

wikiblocks-primitives = { path = "../../primitives", default-features = false }
validator-sets-primitives = { package = "wikiblocks-validator-sets-primitives", path = "../../validator-sets/primitives", default-features = false }

[dev-dependencies]
pallet-babe = { git = "https://github.com/serai-dex/substrate", default-features = false }
pallet-grandpa = { git = "https://github.com/serai-dex/substrate", default-features = false }
pallet-timestamp = { git = "https://github.com/serai-dex/substrate", default-features = false }

sp-io = { git = "https://github.com/serai-dex/substrate", default-features = false }

wikiblocks-abi = { path = "../../abi", default-features = false, features = ["serde"] }

[features]
std = [
  "scale/std",
  "scale-info/std",

  "frame-system/std",
  "frame-support/std",

  "sp-std/std",
  "sp-runtime/std",
  "sp-io/std",

  "coins-pallet/std",
  "validator-sets-pallet/std",

  "wikiblocks-abi/std",
  "wikiblocks-abi/serde",

  "wikiblocks-primitives/std",

  "pallet-babe/std",
  "pallet-grandpa/std",
  "pallet-timestamp/std",
]

try-runtime = [
  "frame-system/try-runtime",
  "frame-support/try-runtime",

  "sp-runtime/try-runtime",
]
default = ["std"]
