[package]
name = "wikiblocks-validator-sets-pallet"
version = "0.1.0"
description = "Validator sets pallet"
license = "AGPL-3.0-only"
repository = "https://github.com/akildemir/wikiblocks/tree/develop/substrate/validator-sets/pallet"
authors = ["Akil <akildemir72@gmail.com>"]
edition = "2021"
rust-version = "1.74"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["scale", "scale-info"]

[lints]
workspace = true

[dependencies]
hashbrown = { version = "0.14", default-features = false, features = ["ahash", "inline-more"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

sp-core = { git = "https://github.com/wikiblocks-encyclopedia/substrate", default-features = false }
sp-io = { git = "https://github.com/wikiblocks-encyclopedia/substrate", default-features = false }
sp-std = { git = "https://github.com/wikiblocks-encyclopedia/substrate", default-features = false }
sp-application-crypto = { git = "https://github.com/wikiblocks-encyclopedia/substrate", default-features = false }
sp-runtime = { git = "https://github.com/wikiblocks-encyclopedia/substrate", default-features = false }
sp-session = { git = "https://github.com/wikiblocks-encyclopedia/substrate", default-features = false }
sp-staking = { git = "https://github.com/wikiblocks-encyclopedia/substrate", default-features = false }

frame-system = { git = "https://github.com/wikiblocks-encyclopedia/substrate", default-features = false }
frame-support = { git = "https://github.com/wikiblocks-encyclopedia/substrate", default-features = false }

pallet-babe = { git = "https://github.com/wikiblocks-encyclopedia/substrate", default-features = false }
pallet-grandpa = { git = "https://github.com/wikiblocks-encyclopedia/substrate", default-features = false }

wikiblocks-primitives = { path = "../../primitives", default-features = false }
validator-sets-primitives = { package = "wikiblocks-validator-sets-primitives", path = "../primitives", default-features = false }

coins-pallet = { package = "wikiblocks-coins-pallet", path = "../../coins/pallet", default-features = false }

[features]
std = [
  "scale/std",
  "scale-info/std",

  "sp-core/std",
  "sp-io/std",
  "sp-std/std",
  "sp-application-crypto/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-staking/std",

  "frame-system/std",
  "frame-support/std",

  "pallet-babe/std",
  "pallet-grandpa/std",

  "wikiblocks-primitives/std",
  "validator-sets-primitives/std",

  "coins-pallet/std",
]

# TODO
try-runtime = []

runtime-benchmarks = [
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]

default = ["std"]
