[package]
name = "wikiblocks-votes-pallet"
version = "0.1.0"
description = "Votes pallet for Wikiblocks"
license = "AGPL-3.0-only"
repository = "https://github.com/akildemir/wikiblocks/tree/develop/substrate/votes/pallet"
authors = ["Akil Demir <akildemir72@gmail.com>"]
edition = "2021"
rust-version = "1.74"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["scale", "scale-info"]

[lints]
workspace = true

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

frame-system = { git = "https://github.com/serai-dex/substrate", default-features = false }
frame-support = { git = "https://github.com/serai-dex/substrate", default-features = false }

sp-core = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-std = { git = "https://github.com/serai-dex/substrate", default-features = false }
sp-runtime = { git = "https://github.com/serai-dex/substrate", default-features = false }

wikiblocks-primitives = { path = "../../primitives", default-features = false, features = ["serde"] }
articles-pallet = { package = "wikiblocks-articles-pallet", path = "../../articles/pallet", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/serai-dex/substrate", default-features = false }

[features]
std = [
  "frame-system/std",
  "frame-support/std",

  "sp-core/std",
  "sp-std/std",
  "sp-io/std",
  "sp-runtime/std",

  "wikiblocks-primitives/std",
  "articles-pallet/std",
]

try-runtime = [
  "frame-system/try-runtime",
  "frame-support/try-runtime",

  "sp-runtime/try-runtime",
]

runtime-benchmarks = [
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]

default = ["std"]
